@@ -1,3 +1,9 @@
+2011-09-21  Jan Hubicka  <jh@suse.cz>
+
+	* ipa-inline.c (relative_time_benefit): Fix wrong bracketting.
+	* ipa-inline.h (estimate_edge_time): Fix pasto.
+	* ipa-inline-analysis.c (do_estiamte_edge_time): Remove capping.
+
 2011-09-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (ix86_expand_sse_movcc): Use
